fix query button alignment

--- a/examibur/src/main/resources/public/css/custom.css
+++ b/examibur/src/main/resources/public/css/custom.css
@@ -37,6 +37,7 @@ footer {
 
 .top-navigation {
 	padding-right: 15px;
+	padding-bottom: 7px;
 }
 
 td.td-ellipsis {
